# bug-bounty-platform

./: .dockerignore  .env.example  Cargo.toml  DEPLOY.md  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  repo.md
.github/workflows/: build.yml
docs/: iteracion-escudo-osint.md  osint-academy.md  security-review-osint.md
migrations/: 0001_init.sql  0002_reports_public_seq.sql  0003_users_oauth.sql  0004_osint.sql  0005_course_requests.sql  0006_email_verification.sql
src/: auth.rs  config.rs  error.rs  main.rs  state.rs
src/audit/: mod.rs
src/db/: assets.rs  attachments.rs  companies.rs  courses.rs  dashboard.rs  email_verifications.rs  mod.rs  osint.rs  payment_methods.rs  payouts.rs  programs.rs  report_events.rs  reports.rs  sessions.rs  users.rs
src/domain/: asset.rs  company.rs  ids.rs  mod.rs  osint.rs  payout.rs  pricing.rs  program.rs  report.rs
src/email/: mod.rs
src/payments/: crypto.rs  details.rs  mod.rs  rail.rs
src/routes/: admin.rs  assets.rs  auth.rs  companies.rs  courses.rs  dashboard.rs  health.rs  home.rs  mod.rs  oauth.rs  osint.rs  payouts.rs  programs.rs  reports.rs  settings.rs
src/storage/: mod.rs
src/web/: mod.rs  shared.rs  templates.rs
static/: app.css
templates/: base.html  dashboard.html  dashboard_admin.html  dashboard_company.html  home.html  login.html  signup.html  signup_pending.html
templates/admin/: audit.html
templates/assets/: new.html
templates/assets/partials/: fields.html
templates/companies/: index.html  new.html  show.html
templates/courses/: analista.html  index.html
templates/osint/: catalog.html  mine.html  new.html  review.html  show.html
templates/partials/: form_error.html  form_ok.html
templates/payouts/: mine.html  queue.html
templates/programs/: new.html  public_index.html  show.html
templates/reports/: list.html  new.html  show.html  triage_list.html
templates/settings/: payment_methods.html  payment_methods_new.html  profile.html
templates/settings/partials/: payment_method_fields.html
